fix container alignment

--- a/AFI/Insurance Products/Flood/css/related-articles.css
+++ b/AFI/Insurance Products/Flood/css/related-articles.css
@@ -1,5 +1,6 @@
 .articles__container {
   max-width: 1150px;
+  margin: auto;
 }
 .articles__container .resources__header {
   text-align: center;
